v3/04_기능_명세서.md
# 04_기능_명세서

<!-- latest-update-2026-06 -->

> **문서 버전**: v3.0  
> **최신 반영일**: 2026-06-22  
> **상세 API 문서**: https://chunbae-tour-api.netlify.app/

## 0. 최종 기능 범위 보강

최종 기능 범위는 다음 도메인을 모두 포함한다.

| 도메인 | 핵심 기능 | 주요 기술/설계 |
| --- | --- | --- |
| Auth/User | JWT, OAuth, 프로필, 마이페이지, 탈퇴, 제재 | Spring Security, JWT, Redis blacklist, OAuth Kakao/Naver |
| Place/Map | 관광지 조회, 상세, 지도 마커, 주변 장소, 길찾기, 지오코딩 | QueryDSL, Redis cache/Geo, Kakao Local/Map Link |
| Search | 통합 검색, 장소/축제 검색, 인기 검색어, 최근 검색어, 자동완성, 오타 교정 | QueryDSL, Redis ZSet/List/cache, Redis Cluster hash tag |
| Market/Festival | 전통시장/축제 조회, 상세, 찜, 관리자 수집 | 공공데이터 API, 스케줄링, 관리자 API |
| Like/Review | 장소/축제/시장 찜, 장소 리뷰 | 공통 UserLike, target validator, JPA |
| Community | 자유/동행 게시글, 댓글, 이미지 | cursor paging, S3, 제재 인터셉터 |
| Chat/Companion | 채팅방, 참여 신청, 메시지, 파일, 동행/리뷰 | WebSocket/STOMP, Redis Pub/Sub, S3 |
| CS/FAQ | FAQ, 상담방, 상담 메시지/파일 | STOMP, S3, 관리자 배정/종료 |
| Payment/Yeopjeon | 충전, 환불, QR 결제, 엽전 잔액/이력 | PortOne V2, Webhook signature, idempotency key |
| Shop/Merchant | 상인 신청, 가게/메뉴/공지/이미지/정산/광고/QR | S3, 관리자 심사, cursor paging |
| Store | 상품, 주문, 보유 아이템, 아이템 QR | 재고/주문 상태 관리, QR token |
| Report/Admin | 신고, 제재, 관리자 대시보드, 감사 로그 | 상태 전이, admin audit log |
| Notification/Translation | 알림, 번역 | Google Translation API, 알림 read/delete |

기능 상세는 기존 본문을 유지하되, 위 표를 최종 구현 기준의 상위 목차로 본다.

---

## 기능 명세서 작성 규칙

| 항목 | 설명 |
| --- | --- |
| **기능 ID** | `F-{도메인prefix}-{번호}` |
| **우선순위** | P0 (필수) / P1 (중요) / P2 (선택) |
| **MVP** | ✅ 포함 / ❌ 제외 |

---

## 1. 인증 / 회원 (담당: 정민교)

### F-AUTH-001 회원가입

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-AUTH-001 |
| **기능명** | 회원가입 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST /auth/signup` |

**동작 방식**
1. 이메일, 비밀번호, 닉네임 입력
2. 이메일 중복 검사 (DB 조회)
3. 닉네임 중복 검사 (DB 조회)
4. 비밀번호 암호화 (BCrypt)
5. 사용자 저장 (role: USER)
6. 201 응답 반환

**유효성 검사 규칙**

| 필드 | 규칙 |
| --- | --- |
| email  | 이메일 형식, 최대 255자, 중복 불가 |
| password  | 8자 이상, 영문+숫자+특수문자 포함 |
| nickname | 2~20자, 중복 불가 |

**비즈니스 규칙**
- 상인은 일반 회원가입으로 USER 계정을 생성한 뒤 `/merchants/apply` 상인 등록 신청을 하고, 관리자 승인 후 role이 MERCHANT로 변경되는 방식으로 처리
- 가입 시 엽전 지갑(Wallet) 자동 생성 (잔액 0)

---

### F-AUTH-002 소셜 로그인 (OAuth)

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-AUTH-002 |
| **기능명** | 소셜 로그인 (카카오·네이버 OAuth 2.0) |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `GET /auth/oauth/{provider}`, `GET /auth/oauth/{provider}/callback` |

**동작 방식**
1. 카카오·네이버 OAuth 2.0 Authorization Code Flow
2. 소셜 계정 정보 수신 → 이메일 기준 기존 회원 조회
3. 신규: USER 계정 자동 생성 + Wallet 생성
4. JWT Access/Refresh 발급 후 프론트엔드로 리다이렉트

**비즈니스 규칙**
- 소셜 계정 email이 일반 계정과 동일하면 별도 계정으로 분리
- Refresh Token은 Redis에 저장 (TTL 7일)

---

### F-AUTH-003 로그인 / 토큰 발급

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-AUTH-003 |
| **기능명** | 로그인 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST /auth/login` |

**동작 방식**
1. 이메일로 사용자 조회
2. 계정 정지 여부 확인
3. 비밀번호 BCrypt 비교
4. Access Token (30분) 생성
5. Refresh Token (7일) 생성 → Redis 저장 (key: `refresh:{userId}`)
6. Access Token → Response Body
7. Refresh Token → HttpOnly Cookie

**토큰 구조**
| 토큰 | 유효기간 | 저장 위치 | Claim |
|——|———|———|——-|
| Access Token | 30분 | 클라이언트 메모리 | userId, role, email |
| Refresh Token | 7일 | HttpOnly Cookie + Redis | userId |

---

### F-AUTH-004 토큰 재발급

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-AUTH-004 |
| **기능명** | Access Token 재발급 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST /auth/reissue` |

**동작 방식**
1. Cookie에서 Refresh Token 추출
2. Redis에서 해당 토큰 존재 여부 확인
3. 유효성 검증 (서명, 만료)
4. 새 Access Token 발급
5. Refresh Token Rotation (새 Refresh Token 재발급 + Redis 갱신)

**보안 고려사항**
- Refresh Token Rotation 적용 → 탈취 시 재사용 불가
- 로그아웃 시 Redis에서 Refresh Token 즉시 삭제
- Access Token 로그아웃 처리 → Redis 블랙리스트 등록 (TTL = 남은 만료 시간)

---

### F-AUTH-005 회원 탈퇴

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-AUTH-005 |
| **기능명** | 회원 탈퇴 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `DELETE /auth/me` |

**동작 방식**
1. 본인 확인 (JWT Access Token)
2. 계정 Soft Delete (`deleted_at` 기록)
3. 찜 데이터 Hard Delete
4. Refresh Token Redis에서 즉시 삭제
5. Access Token 블랙리스트 등록

---

## 1-2. 사용자 / 마이페이지 (담당: 정민교)

### F-USER-001 마이페이지

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-USER-001 |
| **기능명** | 마이페이지 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /users/me`, `PATCH /users/me`, `GET /users/me/home` |

**동작 방식**
- 프로필 조회: JWT에서 userId 추출 → DB 조회 → 엽전 잔액 포함 반환
- 프로필 수정: 닉네임/프로필 이미지 변경 (이미지는 S3 업로드 후 URL 저장)
- 홈 데이터: 최근 방문 장소, 인기 관광지, 다가오는 축제 통합 조회

---

## 2. 관광지 / 지도 (담당: 김인목)

### F-PLACE-001 위치 기반 탐색

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-PLACE-001 |
| **기능명** | 위치 기반 관광지·전통시장 탐색 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `GET /places/nearby` |

**동작 방식**
1. 클라이언트에서 현재 위치 (lat, lng) 전달
2. Redis Geospatial에서 반경 내 장소 우선 조회 (캐시 Hit)
3. 캐시 Miss 시 → DB 조회 (Haversine 공식 또는 QueryDSL 반경 쿼리)
4. DB에도 없을 경우 → 외부 TourAPI Fallback
5. 결과 정렬: 거리순 (직선거리)
6. 로그인 사용자: 찜 여부(isLiked) 포함 반환

**Redis Geospatial 구조**

```
GEOADD geo:places {lng} {lat} {placeId}
GEORADIUS geo:places {lng} {lat} {radius} m ASC
```

**성능 전략**
- 동일 좌표·반경 결과는 Redis에 5분 캐싱
- 위치 좌표는 소수점 3자리로 반올림 후 캐시 키 생성 (불필요한 캐시 증가 방지)

---

### F-PLACE-002 관광지 상세 조회

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-PLACE-002 |
| **기능명** | 관광지 상세 조회 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `GET /places/{placeId}` |

**동작 방식**
1. Redis 캐시 조회 (key: `place:{placeId}`)
2. 캐시 Miss → DB 조회
3. 조회수 증가: Redis INCR `place:view:{placeId}` (Atomic)
4. 로그인 사용자: 찜 여부 포함
5. 응답 캐싱 (TTL 10분)

---

### F-PLACE-003 관광지 별점 리뷰

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-PLACE-003 |
| **기능명** | 관광지 별점 리뷰 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST /places/{placeId}/reviews` |

**동작 방식**
1. 로그인 사용자만 리뷰 작성 가능
2. 영수증 사진(`receiptImageUrl`) 필수 첨부
3. 동일 관광지 중복 리뷰 불가
4. 별점 1~5점 + 텍스트 + 이미지(최대 5장)
5. 리뷰 저장 후 관광지 평균 평점 재계산 (배치 or 실시간)
6. 영수증 사진이 없는 리뷰 또는 허위 리뷰는 신고를 통해 관리자가 삭제할 수 있음
7. 결제/방문 이력 기반 검증은 MVP에서 제외하고 추후 확장

---

### F-PLACE-004 길찾기

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-PLACE-004 |
| **기능명** | 길찾기 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `GET /directions` |

**동작 방식**
1. 목적지 좌표 수신
2. 카카오맵 앱 딥링크 URL 생성
3. 딥링크 반환 → 클라이언트에서 카카오맵 앱 실행

**비즈니스 규칙**
- 사업자 등록 미완료로 카카오맵 API 직접 사용 불가 → 앱 딥링크로 연결
- 서버는 경로 계산 없이 딥링크 생성만 수행
- 카카오맵 앱 미설치 시 앱 스토어로 이동

---

### F-PLACE-005 관광지 찜

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-PLACE-005 |
| **기능명** | 찜하기 / 취소 (관광지·전통시장·축제) |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST /likes`, `DELETE /likes` (LikeTargetType: PLACE·MARKET·FESTIVAL) |

**동작 방식**
1. 로그인 사용자 확인
2. LikeTargetType(PLACE·MARKET·FESTIVAL) + targetId로 대상 식별
3. 이미 찜한 상태 확인 (UserLike 테이블 조회)
4. 찜 추가: UserLike INSERT + likeCount INCR
5. 찜 취소: UserLike DELETE + likeCount DECR
6. likeCount는 Redis INCR/DECR로 처리 후 배치 동기화

**비즈니스 규칙**
- 관광지·전통시장·축제 모두 동일한 UserLike 구조 사용 (LikeTargetType으로 구분)
- 찜 목록 조회 시 타입별 필터링 가능

---

## 3. 검색 (담당: 김인목)

### F-SEARCH-001 키워드 검색

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-SEARCH-001 |
| **기능명** | 통합 키워드 검색 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `GET /search/places`, `POST /search` |

**동작 방식**
1. 키워드 수신
2. DB 검색 (QueryDSL - 관광지명 LIKE 검색)
3. DB 결과 부족 시 → 
3-1. QueryDSL 기반 DB 검색 수행
3-2. 인기 검색어 Redis ZSET 사용
3-3. 외부 검색 API 연동은 추후 확장
4. 검색어 Redis ZSet 집계: `ZINCRBY search:ranking 1 {keyword}`
5. 사용자 최근 검색어 저장: Redis LIST `search:recent:{userId}` (최대 10개)
6. 결과 반환

**인기 검색어 집계 구조**

```
Redis ZSet key: search:ranking
- ZINCRBY: 검색할 때마다 score +1
- ZREVRANGE: TOP 10 조회
- 매일 자정 score 초기화 (일간 랭킹)
```

---

### F-SEARCH-002 인기 검색어

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-SEARCH-002 |
| **기능명** | 인기 검색어 조회 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /search/popular` |

**동작 방식**
1. Redis ZSet `ZREVRANGE search:ranking 0 9 WITHSCORES`
2. 이전 순위와 비교하여 changeType 계산 (UP/DOWN/SAME/NEW)
3. 이전 순위는 `search:ranking:prev`에 별도 저장

---

### F-SEARCH-003 검색어 자동완성

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-SEARCH-003 |
| **기능명** | 검색어 자동완성 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /search/suggest` |

**동작 방식**
1. prefix 수신 (최소 1자)
2. Redis ZSet에서 prefix 매칭 키 조회
3. 관광지명 DB LIKE 검색 병행
4. 최대 5개 반환

---

## 4. 전통시장 / 축제 (담당: 박경화)

### F-MARKET-001 전통시장 조회 / 상세

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-MARKET-001 |
| **기능명** | 전통시장 목록 조회 및 상세 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /markets`, `GET /markets/{marketId}` |

**동작 방식**
- 목록: 지역 필터·검색 → DB 조회 → 마커 좌표 포함 반환
- 상세: 시장명·위치·운영시간·대표 이미지·입점 가게 목록·찜 여부 반환
- 로그인 사용자: 찜 여부(isLiked) 포함
- 데이터 수집: 공공데이터포털 API 연동 (ShedLock 스케줄러)

---

### F-FEST-001 축제 목록 / 캘린더

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-FEST-001 |
| **기능명** | 축제 목록 및 캘린더 조회 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /festivals`, `GET /calendar` |

**동작 방식**
- 목록 조회: 지역·날짜 필터 → DB 조회 → Redis 캐싱 (TTL 1시간)
- 캘린더 조회: 연·월 기준 → 해당 월에 진행 중인 축제 날짜별 그룹화

**비즈니스 규칙**
- 관리자가 직접 등록·관리 (`POST /admin/events`)
- 공공데이터포털·TourAPI 연동 자동 수집 구현됨 (ShedLock으로 다중 인스턴스 중복 실행 방지)

---

## 5. 추천 (담당: 김인목)

### F-REC-001 개인화 추천

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-REC-001 |
| **기능명** | 개인화 관광코스 추천 |
| **우선순위** | P2 |
| **MVP** | ❌ (추후) |
| **관련 API** | `GET /recommend/personal` |

**동작 방식** (추후 구현)
1. 사용자 방문 이력 조회 (Redis SET `visited:{userId}`)
2. 찜 목록, 검색 이력 기반 선호 카테고리 추출
3. 방문하지 않은 장소 우선 필터링
4. 유사 카테고리 + 거리 기반 정렬 반환

---

### F-REC-002 인기 / 위치 기반 추천

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-REC-002 |
| **기능명** | 인기·위치 기반 추천 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /recommend/popular`, `GET /recommend/nearby`, `GET /recommend/category` |

**동작 방식**
- 인기 추천: Redis ZSet `recommend:popular` (찜수+조회수 가중합산) TOP 10
- 위치 기반: Redis Geospatial 반경 내 장소 랜덤 샘플링
- 카테고리: 카테고리 필터 + 평점 내림차순 정렬

---

## 6. 커뮤니티 (담당: 박경화)

### F-COM-001 게시글 CRUD

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-COM-001 |
| **기능명** | 커뮤니티 게시글 작성·조회·수정·삭제 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST/GET/PUT/DELETE /posts/free`, `POST/GET/PUT/DELETE /posts/companions` |

**동작 방식**
- 작성: 로그인 사용자만 가능, 이미지 최대 5장 (S3 업로드)
- 자유 게시판은 `/posts/free` 기준으로 작성/조회/수정/삭제
- 동행 모집 게시글은 `/posts/companions` 기준으로 관리
- 조회: 비로그인 가능, 조회수 Redis INCR
- 수정/삭제: 본인 게시글만 가능 (작성자 ID 비교)
- 삭제: Soft Delete (deleted_at 설정, 실제 DB 데이터 보존)

**게시판 종류**
| 게시판 | 설명 | postType |
|——–|——|———|
| 동행 모집 | 함께 여행할 동행자 모집 | COMPANION |
| 자유 게시판 | 자유롭게 여행 정보와 후기를 공유하는 게시판 | FREE |

---

### F-COM-002 댓글

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-COM-002 |
| **기능명** | 댓글 / 대댓글 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST/GET/PATCH/DELETE /comments` |

**동작 방식**
- 댓글: `parentCommentId = null`
- 대댓글: `parentCommentId = {부모 댓글 ID}`
- 대댓글의 대댓글은 허용하지 않음 (depth 1 제한)
- 삭제: Soft Delete

---

---

### F-COM-004 신고

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-COM-004 |
| **기능명** | 신고하기 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST /reports` |

**동작 방식**
1. 신고 대상 타입 (POST/COMMENT/REVIEW/USER) + ID 수신
2. 동일 대상 중복 신고 방지
3. 신고 저장 (status: PENDING)
4. 관리자 대시보드에 신고 건수 표시

**신고 사유**
| 코드 | 설명 |
|——|——|
| SPAM | 스팸/광고 |
| ABUSE | 욕설/비방 |
| INAPPROPRIATE | 부적절한 콘텐츠 |
| OTHER | 기타 |

---

## 7. 채팅 / 매칭 (담당: 임하은)

### F-CHAT-001 채팅 방 생성 및 관리

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-CHAT-001 |
| **기능명** | 채팅방 생성 및 관리 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST /chat-rooms`, `GET /chat-rooms`, `GET /chat-rooms/{chatRoomId}` |

**동작 방식**
- 생성: 동행 게시글(`postId`) 기반으로 채팅방 생성, 생성자가 자동으로 방장(`OWNER_ACTIVE`)으로 참여
- 목록: 내가 참여 중이거나 생성한 채팅방 목록, 안읽은 메시지 수 포함
- 상세: 채팅방 정보 + 참여자 수 + 방장 여부

**채팅방 상태**
| 상태 | 설명 |
|——|——|
| OPEN | 참여 신청 가능 |
| FULL | 정원 마감 |
| CLOSED | 방장 종료 또는 여행 종료 |

**채팅방 참여자 상태**
| 상태 | 설명 |
|——|——|
| OWNER_ACTIVE | 방장, 참여 중 |
| MEMBER_ACTIVE | 일반 참여자, 참여 중 |
| MEMBER_LEFT | 일반 참여자, 자발적 퇴장 |
| MEMBER_KICKED | 일반 참여자, 강퇴됨 |

---

### F-CHAT-002 실시간 메시지 송수신

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-CHAT-002 |
| **기능명** | 실시간 메시지 송수신 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | WebSocket `/pub/chat/rooms/{chatRoomId}/messages`, `POST /chat-rooms/{chatRoomId}/files` |

**동작 방식**
1. 클라이언트 WebSocket 연결 (`/ws-stomp`)
2. JWT 토큰으로 WebSocket 핸드셰이크 인증
3. 채팅방 구독 (`/sub/chat/rooms/{chatRoomId}`)
4. 메시지 발행 → STOMP 브로커 수신
5. Redis Pub/Sub으로 모든 서버에 메시지 발행
6. 구독 중인 클라이언트에 Push
7. MySQL에 메시지 저장
8. 단, 영구 보관을 전제로 하지 않고 MVP에서는 최근 메시지 조회 중심으로 관리

**메시지 타입**
| 타입 | 설명 |
| — | — |
| TEXT | 일반 텍스트 메시지 |
| IMAGE | 이미지 메시지, S3 URL 기반 전송 |
| FILE | 파일 메시지, S3 URL 기반 전송 |
| SYSTEM | 입장/퇴장/강퇴 알림 |

**파일/이미지 메시지 처리**

- 파일/이미지 메시지는 `POST /chat-rooms/{chatRoomId}/files`로 S3에 먼저 업로드한다.
- 업로드 API는 채팅방 참여자 권한을 검증한 뒤 S3에 저장하고 `fileUrl`, `fileName`, `fileSize`, `contentType`을 반환한다.
- 이후 클라이언트는 WebSocket 메시지 발행 시 `messageType`을 `IMAGE` 또는 `FILE`로 지정하고, 반환받은 `fileUrl`을 함께 전송한다.
- DB에는 S3 URL(`file_url`)과 원본 파일명(`file_name`), 파일 크기(`file_size`)를 함께 저장한다.
- 일반 텍스트 메시지는 `content`를 사용하고, 파일/이미지 메시지는 `content`를 선택 설명 또는 캡션으로 사용할 수 있다.

---

### F-CHAT-003 참여 신청 / 수락 / 거절

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-CHAT-003 |
| **기능명** | 채팅방 참여 신청 관리 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST /chat-rooms/{chatRoomId}/join-requests`, approve/reject |

**동작 방식**
1. 사용자가 참여 신청 (status: PENDING)
2. 방장에게 알림 발송 (Spring ApplicationEvent → Notification 도메인)
3. 방장이 수락 → 사용자 채팅방 멤버 등록 + 입장 시스템 메시지 발송
4. 방장이 거절 → 신청자에게 거절 알림

**동시성 처리**
- 수락 시 정원 초과 방지: Redis 분산 락 (chatRoomId 기준) + DB 비관적 락
- 상세 내용은 동시성 제어 설계서 시나리오 3 참조

---

### F-CHAT-004 번역

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-CHAT-004 |
| **기능명** | 채팅 메시지 번역 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST /translations`, WebSocket 메시지 내 `translateTo` 필드 |

**동작 방식**
- 채팅방 메시지에서 사용자가 번역을 요청할 때 `content`와 `targetLanguage`를 서버로 전달
- 서버에서 Google Cloud Translation API를 호출하고 `translatedContent`를 응답
- 번역 ON/OFF는 클라이언트 표시 설정이며, 서버 API는 요청된 문장 단위로 번역 수행
- 결제 화면 번역은 PG사 제공 기능을 사용하므로 채팅/번역 담당 도메인 범위에서 제외
- MVP에서는 번역 캐시를 적용하지 않으며, 번역 실패는 `COMMON_007`로 응답하고 상세 실패 내용은 `common_error_logs`에 기록

---

### F-CHAT-005 알림

> Notification 도메인은 확장 가능한 공통 알림 구조로 설계한다. 단, MVP 구현 범위는 동행 채팅 알림과 고객센터 상담 알림을 구현한다.
> 

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-CHAT-005 |
| **기능명** | 실시간 알림 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /notifications`, `PATCH /notifications/{notificationId}/read`, `PATCH /notifications/read-all`, `DELETE /notifications/{notificationId}`, WebSocket `/user/queue/notifications` |

**알림 타입**

| 타입 | 설명 | referenceType |
| --- | --- | --- |
| CHAT_MESSAGE | 동행 채팅 새 메시지 | CHAT_ROOM |
| CHAT_JOIN_REQUEST | 채팅방 참여 신청 | CHAT_ROOM |
| CHAT_JOIN_APPROVED | 참여 신청 승인 | CHAT_ROOM |
| CHAT_JOIN_REJECTED | 참여 신청 거절 | CHAT_ROOM |
| CHAT_MEMBER_KICKED | 채팅방 강퇴 | CHAT_ROOM |
| CHAT_OWNER_TRANSFERRED | 채팅방 방장 위임 | CHAT_ROOM |
| SUPPORT_MESSAGE | 고객센터 상담 새 메시지 | SUPPORT_ROOM |
| SUPPORT_ROOM_CLOSED | 고객센터 상담 종료 | SUPPORT_ROOM |

**알림 발생 이벤트**

| 이벤트 | 수신자 | 알림 내용 |
| --- | --- | --- |
| 참여 신청 | 방장 | “{nickname}님이 참여를 신청했습니다.” |
| 신청 수락 | 신청자 | “참여 신청이 수락되었습니다.” |
| 신청 거절 | 신청자 | “참여 신청이 거절되었습니다.” |
| 새 메시지 | 채팅방 참여자 | “{nickname}: {메시지 미리보기}” |
| 강퇴 | 강퇴 대상자 | “채팅방에서 퇴장 처리되었습니다.” |
| 방장 위임 | 신규 방장 | “채팅방 방장이 되었어요.” |
| 고객센터 새 메시지 | 상담 참여자 | “고객센터 상담 메시지가 도착했습니다.” |
| 고객센터 상담 종료 | 상담 요청자 | “고객센터 상담이 종료되었습니다.” |

**동작 방식**
1. 이벤트 발생 → Spring Event 발행
2. NotificationService에서 알림 DB 저장
3. Redis Pub/Sub으로 해당 사용자 WebSocket에 Push (`/user/queue/notifications`)
4. 사용자는 알림 단건 읽음, 전체 읽음, 삭제를 수행할 수 있음

**MVP 범위**
- Notification 도메인은 확장 가능한 공통 알림 구조로 설계하지만,  MVP에서는 동행 채팅 알림과 고객센터 상담 알림을 구현한다.

---

### F-CHAT-006 동행 생성·완료

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-CHAT-006 |
| **기능명** | 동행 채팅방 생성 및 동행 완료 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST /chat/rooms`, `PATCH /chat/rooms/{roomId}/complete`, `GET /chat/rooms`, `GET /chat/rooms/{roomId}` |

**동작 방식**
- 생성: 동행 게시글 연동, 최대 인원 설정, 방장 자동 지정
- 참여: 참여 신청(JOIN_REQUEST) → 방장 승인 → 멤버 추가
- 완료: 방장이 동행 완료 처리 → 리뷰 작성 가능 상태로 전환
- 강퇴/방장 위임 기능 포함

---

### F-CHAT-007 동행 리뷰

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-CHAT-007 |
| **기능명** | 동행 리뷰 / 점수 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST /companion-reviews`, `GET /users/{userId}/companion-score` |

**동작 방식**
1. 같은 채팅방 참여자에게만 리뷰 작성 가능
2. 1:1 중복 리뷰 불가 (동일 chatRoomId + targetUserId 조합)
3. 평균 동행 점수는 UserProfile에 반영 (실시간 재계산)

---

## 8. 결제 / 엽전 (담당: 신현민)

### F-PAY-001 엽전 충전

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-PAY-001 |
| **기능명** | 엽전 충전 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST /payments/charge`, `/payments/callback/success` |

**동작 방식**
1. 충전 금액 + 멱등성 키(idempotencyKey) 수신
2. 멱등성 키 중복 검사 (Redis or DB)
3. PG사 결제 요청 (주문 생성)
4. PG사 결제창 리다이렉트 URL 반환
5. PG사 결제 완료 → 콜백 수신
6. 엽전 잔액 증가 (Wallet UPDATE)
7. 충전 내역 저장

**멱등성 처리**
- 동일 `idempotencyKey`로 중복 요청 시 이전 응답 그대로 반환
- 네트워크 오류로 인한 중복 충전 방지

---

### F-PAY-002 QR 결제

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-PAY-002 |
| **기능명** | QR 기반 엽전 결제 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `GET /yeopjeon/qr/shops/{shopId}`, `POST /yeopjeon/qr/pay`, confirm, reject |

**동작 방식**
1. 사용자가 상인 QR 스캔 → 상인 정보 + 메뉴 조회
2. 메뉴 선택 + 금액 확인 후 결제 요청
3. 분산 락 획득 (userId 기준)
4. DB 비관적 락으로 잔액 확인
5. 잔액 가점유 (임시 차감)
6. 결제 요청 저장 (status: PENDING_CONFIRM, TTL 5분)
7. 상인 결제 확인 화면에 결제 요청 반영
8. 상인 수락 → 상태 COMPLETED, 잔액 확정 차감 + 상인 잔액 증가
9. 상인 거절 → 상태 REJECTED, 가점유 복구
10. 사용자가 직접 취소 → 상태 CANCELLED, 가점유 복구

**결제 요청 만료 처리**
- 상인이 5분 내 응답 없으면 EXPIRED 처리 (Redis TTL 활용)
- 가점유 금액 자동 복구

---

### F-PAY-003 환불

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-PAY-003 |
| **기능명** | 엽전 환불 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST /payments/{orderId}/refund`, 관리자 승인/거절 API |

**동작 방식**
1. 사용자가 환불 요청 (미사용 엽전 전액만 가능)
2. 잔액 전액 보유 여부 확인
3. 환불 요청 저장 (status: PENDING)
4. 관리자 검토 후 승인/거절
5. 승인 시 → PG사 환불 요청 + 엽전 잔액 차감

**환불 정책**
- 미사용 엽전 전액만 환불 가능
- 부분 사용 후 잔액 환불 불가 (정책상 제한)
- 환불 처리 기간: 영업일 기준 3~5일

---

## 9. 스토어 (담당: 신현민)

### F-STORE-001 상품 구매

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-STORE-001 |
| **기능명** | 한정 수량 상품 구매 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST /store/products/{productId}/purchase` |

**동작 방식**
1. Redis 가점유 재고 차감 (DECR)
2. 재고 없으면 즉시 품절 안내
3. 분산 락 획득 (userId 기준)
4. DB 비관적 락으로 재고 최종 확인
5. 엽전 잔액 차감
6. 재고 확정 차감 + 구매 내역 저장
7. 보유 아이템 등록

**동시성 처리**
- 동시성 제어 설계서 시나리오 1 참조

---

### F-STORE-002 보유 아이템 조회 / 아이템 QR

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-STORE-002 |
| **기능명** | 보유 아이템 조회 및 아이템 QR 사용 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /store/items/owned`, `POST /store/items/{itemId}/use` |

**동작 방식**
- 보유 아이템 조회: 구매한 아이템 목록 (상품명·수량·상태 포함)
- 아이템 QR: 사용 요청 시 일회성 QR 토큰 발급
- 상인이 QR 스캔 → 아이템 상태 USED로 변경
- 만료된 QR 재사용 불가

---

## 10. 상인 (담당: 신현민)

### F-MERCHANT-001 가게 등록 및 관리

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-MERCHANT-001 |
| **기능명** | 상인 가게 등록 및 관리 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `POST /merchants/apply`, `GET/PATCH /merchants/me/shop` |

**동작 방식**
- 등록 신청: 사업자 등록번호 + 가게 정보 입력 → 관리자 승인 대기
- 승인 후: MERCHANT 권한 부여, 지도에 가게 마커 노출
- 수정: 운영시간, 소개글 등 직접 수정 가능 (위치는 수정 불가, 관리자 처리)

**상인 인증 마크**
- 별도 신청 → 관리자 서류 검토 후 인증 마크 부여
- 인증 상인은 지도 마커에 뱃지 표시

---

### F-MERCHANT-002 메뉴 관리

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-MERCHANT-002 |
| **기능명** | 가게 메뉴 등록·수정·삭제 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST/PATCH/DELETE /merchants/me/shop/menus` |

**동작 방식**
- 메뉴명·가격·설명·이미지(S3) 등록
- 수정·삭제: 본인 가게 메뉴만 가능
- 가게 상세 조회 시 메뉴 목록 함께 반환

---

### F-MERCHANT-003 광고 신청

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-MERCHANT-003 |
| **기능명** | 가게 광고 신청 |
| **우선순위** | P2 |
| **MVP** | ✅ |
| **관련 API** | `POST /merchants/me/shop/ads` |

**동작 방식**
1. 광고 기간·유형 선택 후 신청
2. 관리자 승인 대기 (status: PENDING)
3. 승인 시 배너/광고 영역에 노출 시작
4. 만료 시 자동 비활성화

---

### F-MERCHANT-004 정산

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-MERCHANT-004 |
| **기능명** | 상인 엽전 정산 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /merchants/me/shop/wallet`, `POST /merchants/me/shop/settlements` |

**동작 방식**
1. QR 결제 수신 누적 → 상인 Wallet 잔액 증가
2. 상인이 정산 신청 → 관리자 검토
3. 정산 계좌로 실제 현금 이체
4. 정산 완료 후 상인 엽전 잔액 차감

---

---

## 11. CS / FAQ (담당: 임하은)

### F-CS-001 FAQ 조회

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-CS-001 |
| **기능명** | FAQ 조회 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /faqs` |

**동작 방식**
- 비로그인 포함 전체 공개 조회
- 관리자가 등록·수정·삭제 (`/admin/faqs`)
- 카테고리별 필터 지원

---

### F-CS-002 고객센터 실시간 상담 채팅

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-CS-002 |
| **기능명** | 고객센터 실시간 상담 채팅 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST /support/rooms`, `GET /support/rooms/me`, `GET /admin/support/rooms`, WebSocket `/pub/support/rooms/{supportRoomId}/messages`, `/sub/support/rooms/{supportRoomId}` |

**동작 방식**
1. 사용자가 고객센터에서 상담 요청을 생성한다.
2. 상담방은 `WAITING` 상태로 생성된다.
3. 관리자 페이지에서 대기 상담방을 조회한다.
4. 사용자와 관리자는 동일한 `/ws-stomp` 연결을 사용하되, STOMP 경로는 `/support`로 분리한다.
5. 상담 종료 시 관리자가 상담방을 `CLOSED` 상태로 변경한다.
6. 종료 시 사용자에게 `SUPPORT_ROOM_CLOSED` 알림 발송.

**비즈니스 규칙**
- 동행 채팅과 테이블 및 API 경로를 분리하여 관리한다.
- 파일 첨부 지원 (S3 업로드 후 URL 전송, Apache Tika로 포맷 검증)

---

## 12. 관리자 (담당: 정민교)

### F-ADMIN-001 통합 관리 대시보드

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-ADMIN-001 |
| **기능명** | 관리자 대시보드 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /admin/dashboard` |

**대시보드 표시 항목**
| 항목 | 데이터 소스 |
|——|———–|
| 전체 회원 수 | DB COUNT |
| 전체 상인 수 | DB COUNT |
| 미처리 신고 수 | DB COUNT (status=PENDING) |
| 상인 인증 신청 대기 | DB COUNT |
| 오늘 결제 금액 | DB SUM |
| 오늘 신규 가입 | DB COUNT |

---

### F-ADMIN-002 콘텐츠 관리

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-ADMIN-002 |
| **기능명** | 관광지 / 축제 / 배너 관리 |
| **우선순위** | P0 |
| **MVP** | ✅ |
| **관련 API** | `/admin/places`, `/admin/events`, `/admin/banners`, `/admin/markets`, `/admin/shops` |

**동작 방식**
- 관광지 등록/수정: 지도 마커 자동 연동 (Redis Geospatial GEOADD)
- 관광지 삭제: Soft Delete or 비공개 처리 (HIDE)
- 축제 등록: 캘린더 자동 반영, 공공데이터포털 자동 수집 보완
- 전통시장 관리: 공공데이터 자동 수집 + 관리자 직접 수정
- 가게 관리: 미승인 가게 노출 제어, 위치 수정 (상인 직접 수정 불가)
- 캐시 무효화: 관광지/축제 수정 시 관련 Redis 캐시 즉시 삭제

---

### F-ADMIN-003 회원 관리 / 제재

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-ADMIN-003 |
| **기능명** | 회원 목록 조회 및 제재 처리 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /admin/users`, `GET /admin/users/{userId}`, `POST /admin/sanctions`, `DELETE /admin/sanctions/{userId}` |

**동작 방식**
- 회원 목록 조회: 닉네임/이메일 검색, 상태(정상/정지) 필터
- 제재: 사유 + 기간 입력 → 해당 사용자 status=SUSPENDED
- 제재 해제: 즉시 복구
- 제재 사용자 로그인 시 토큰 발급 거부 (AUTH_007)
- 감사 로그에 제재 이력 기록

---

### F-ADMIN-004 상인 인증 처리

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-ADMIN-004 |
| **기능명** | 상인 신청 심사 및 인증 마크 부여 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /admin/merchant-applications`, `PATCH /admin/merchant-applications/{id}/approve`, `PATCH /admin/merchant-applications/{id}/reject`, `POST /admin/shop-certifications/{shopId}/approve` |

**동작 방식**
- 상인 신청 목록 조회 (status=PENDING)
- 승인: USER role → MERCHANT, 가게 마커 지도 노출
- 거절: 사유 기록, USER 유지
- 상인 인증 마크: 서류 검토 후 별도 인증 부여 → 지도 마커 뱃지 표시

---

### F-ADMIN-005 신고 처리

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-ADMIN-005 |
| **기능명** | 신고 목록 조회 및 처리 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /admin/reports`, `PATCH /admin/reports/{reportId}/process` |

**동작 방식**
- 신고 목록: 게시글·댓글·리뷰·사용자 신고 통합 조회
- 처리: 무효·콘텐츠 삭제·제재 중 선택 → status=PROCESSED
- 중복 신고 동일 대상 건수 표시
- 처리 이력 감사 로그 기록

---

### F-ADMIN-006 정산 / 환불 관리

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-ADMIN-006 |
| **기능명** | 상인 정산 처리 및 사용자 환불 승인 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `GET /admin/settlements`, `PATCH /admin/settlements/{id}/approve`, `GET /admin/refunds`, `PATCH /admin/refunds/{id}/approve`, `PATCH /admin/refunds/{id}/reject` |

**동작 방식**
- 정산 승인: 상인 출금 신청 검토 → 승인 시 외부 이체 처리 + 상인 엽전 차감
- 환불 승인: 사용자 환불 요청 검토 → 승인 시 PG사 환불 API 호출 + 엽전 차감
- 환불 거절: 사유 기록

---

### F-ADMIN-007 상품 관리

| 항목 | 내용 |
| --- | --- |
| **기능 ID** | F-ADMIN-007 |
| **기능명** | 스토어 상품 등록·수정·삭제 |
| **우선순위** | P1 |
| **MVP** | ✅ |
| **관련 API** | `POST /admin/products`, `PATCH /admin/products/{productId}`, `DELETE /admin/products/{productId}` |

**동작 방식**
- 상품 등록: 상품명·설명·가격(엽전)·재고·이미지(S3)
- 수정: 가격·재고 실시간 반영
- 삭제: 보유 아이템 있는 경우 비활성화(INACTIVE) 처리

---

*본 문서는 SA 설계 과정에서 지속적으로 업데이트됩니다.*

